--- a/root/chess_simulator/makefile
+++ b/root/chess_simulator/makefile
@@ -1,14 +1,16 @@
 CC = g++
 CFLAGS = -g
-OBJS = ChessGame.o ChessBoard.o ChessAlgorithm.o ChessMove.o ChessPiece.o BoardPosition.o
+OBJS = ChessGameManager.o ChessGame.o ChessBoard.o ChessAlgorithm.o ChessMove.o ChessPiece.o BoardPosition.o
 BUILD_DIR = $(CHESS_ROOT)/bin
 OUT_OBJS = $(addprefix $(BUILD_DIR)/, $(OBJS))
 
 $(BUILD_DIR)/%.o : %.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(BUILD_DIR)/play_game.out: mainGame.cc $(BUILD_DIR)/ChessGame.o
-	$(CC) $(CFLAGS) -o $(BUILD_DIR)/play_game.out mainGame.cc $(OUT_OBJS)
+$(BUILD_DIR)/play_game.out: mainGame.cc $(BUILD_DIR)/ChessGameManager.o
+	$(CC) $(CFLAGS) -o $(BUILD_DIR)/play_game.out  mainGame.cc $(OUT_OBJS) -lpthread
+
+$(BUILD_DIR)/ChessGameManager.o : ChessGameManager.h $(BUILD_DIR)/ChessGame.o
  
 $(BUILD_DIR)/ChessGame.o: ChessGame.h $(BUILD_DIR)/ChessBoard.o $(BUILD_DIR)/ChessAlgorithm.o
 
