Create the ChessGameServer
This adds thrift so that we have a ChessGameServer that accepts requests
from php.

Installing thrift may be problematic... Once you have it installed
set THRIFT_CPP_DIR to the C++ source files and THRIFT_PHP_DIR to the
PHP source files for everything to work.

--- a/root/chess_simulator/makefile
+++ b/root/chess_simulator/makefile
@@ -1,24 +1,34 @@
 CC = g++
 CFLAGS = -g
-OBJS = ChessGameManager.o ChessGame.o ChessBoard.o ChessAlgorithm.o ChessMove.o ChessPiece.o BoardPosition.o
 BUILD_DIR = $(CHESS_ROOT)/bin
+OBJS = ChessGameManager.o ChessGame.o ChessBoard.o ChessAlgorithm.o ChessMove.o ChessPiece.o BoardPosition.o
 OUT_OBJS = $(addprefix $(BUILD_DIR)/, $(OBJS))
+EXEC = startServer
+LIBS = /usr/local/lib
 
-$(BUILD_DIR)/%.o : %.cc
+MAIN_FILE = ChessGameServerHandler.cc
+
+THRIFT_SRC_DIR = $(CHESS_ROOT)/root/thrift/gen-cpp
+THRIFT_SRCS = $(addprefix $(THRIFT_SRC_DIR)/, ChessGameServer.cpp ChessGameServer_constants.cpp ChessGameServer_types.cpp)
+
+$(BUILD_DIR)/%.o : %.cc %.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(BUILD_DIR)/play_game.out: mainGame.cc $(BUILD_DIR)/ChessGameManager.o
-	$(CC) $(CFLAGS) -o $(BUILD_DIR)/play_game.out  mainGame.cc $(OUT_OBJS) -lpthread
+$(BUILD_DIR)/play_game.out: $(MAIN_FILE) $(BUILD_DIR)/ChessGameManager.o
+	$(CC) $(CFLAGS) -o $(BUILD_DIR)/$(EXEC)  -I $(THRIFT_SRC_DIR) -I$(BOOST_DIR) -I$(THRIFT_CPP_DIR)  -L $(LIBS) \
+																						$(MAIN_FILE) $(OUT_OBJS) $(THRIFT_SRCS) -lpthread -lthrift 
 
-$(BUILD_DIR)/ChessGameManager.o : ChessGameManager.h $(BUILD_DIR)/ChessGame.o
+$(BUILD_DIR)/ChessGameManager.o : $(BUILD_DIR)/ChessGame.o
  
-$(BUILD_DIR)/ChessGame.o: ChessGame.h $(BUILD_DIR)/ChessBoard.o $(BUILD_DIR)/ChessAlgorithm.o
+$(BUILD_DIR)/ChessGame.o: $(BUILD_DIR)/ChessBoard.o $(BUILD_DIR)/ChessAlgorithm.o
 
-$(BUILD_DIR)/ChessAlgorithm.o : ChessAlgorithm.h $(BUILD_DIR)/ChessMove.o
+$(BUILD_DIR)/ChessAlgorithm.o : $(BUILD_DIR)/ChessMove.o
 
-$(BUILD_DIR)/ChessBoard.o: ChessBoard.h $(BUILD_DIR)/ChessMove.o
+$(BUILD_DIR)/ChessBoard.o: $(BUILD_DIR)/ChessMove.o
 
-$(BUILD_DIR)/ChessMove.o: ChessMove.h $(BUILD_DIR)/ChessPiece.o
+$(BUILD_DIR)/ChessMove.o: $(BUILD_DIR)/ChessPiece.o
 
-$(BUILD_DIR)/ChessPiece.o: ChessPiece.h $(BUILD_DIR)/BoardPosition.o
+$(BUILD_DIR)/ChessPiece.o: $(BUILD_DIR)/BoardPosition.o
 
+clean:
+	rm $(BUILD_DIR)/$(EXEC) $(OUT_OBJS)
