Ran through cpp code, fixed spacing, added test algo

--- a/chess_simulator/makefile
+++ b/chess_simulator/makefile
@@ -1,6 +1,6 @@
 CC = g++
-CFLAGS = -g
-BUILD_DIR = $(CHESS_ROOT)/bin
+CFLAGS = -g -DHAVE_NETINET_IN_H
+BUILD_DIR = $(CPP_CHESS_ROOT)/bin
 OBJS = ChessGameManager.o ChessGame.o ChessBoard.o ChessAlgorithm.o ChessMove.o ChessPiece.o BoardPosition.o
 OUT_OBJS = $(addprefix $(BUILD_DIR)/, $(OBJS))
 EXEC = startServer
@@ -8,7 +8,7 @@ LIBS = /usr/local/lib
 
 MAIN_FILE = ChessGameServerHandler.cc
 
-THRIFT_SRC_DIR = $(CHESS_ROOT)/thrift/gen-cpp
+THRIFT_SRC_DIR = $(CPP_CHESS_ROOT)/thrift/gen-cpp
 THRIFT_SRCS = $(addprefix $(THRIFT_SRC_DIR)/, ChessGameServer.cpp ChessGameServer_constants.cpp ChessGameServer_types.cpp)
 
 $(BUILD_DIR)/%.o : %.cc %.h
@@ -19,7 +19,7 @@ $(BUILD_DIR)/play_game.out: $(MAIN_FILE) $(BUILD_DIR)/ChessGameManager.o
 																						$(MAIN_FILE) $(OUT_OBJS) $(THRIFT_SRCS) -lpthread -lthrift 
 
 $(BUILD_DIR)/ChessGameManager.o : $(BUILD_DIR)/ChessGame.o
- 
+
 $(BUILD_DIR)/ChessGame.o: $(BUILD_DIR)/ChessBoard.o $(BUILD_DIR)/ChessAlgorithm.o
 
 $(BUILD_DIR)/ChessAlgorithm.o : $(BUILD_DIR)/ChessMove.o
@@ -31,4 +31,4 @@ $(BUILD_DIR)/ChessMove.o: $(BUILD_DIR)/ChessPiece.o
 $(BUILD_DIR)/ChessPiece.o: $(BUILD_DIR)/BoardPosition.o
 
 clean:
-	rm $(BUILD_DIR)/$(EXEC) $(OUT_OBJS)
+	rm -f $(BUILD_DIR)/$(EXEC) $(OUT_OBJS)
