Move stuff around, CHESS_ROOT -> CPP_CHESS_ROOT, PHP_CHESS_ROOT for cygwin issues :)

--- a/server/cpp/makefile
+++ b/server/cpp/makefile
@@ -1,6 +1,6 @@
 CC = g++
 CFLAGS = -g -DHAVE_NETINET_IN_H
-BUILD_DIR = $(CHESS_ROOT)/bin
+BUILD_DIR = $(CPP_CHESS_ROOT)/bin
 OBJS = ChessGameManager.o ChessGame.o ChessBoard.o ChessAlgorithm.o ChessMove.o ChessPiece.o BoardPosition.o
 OUT_OBJS = $(addprefix $(BUILD_DIR)/, $(OBJS))
 EXEC = startServer
