--- a/server/cpp/tests/makefile
+++ b/server/cpp/tests/makefile
@@ -1,6 +1,6 @@
 CC = g++
 CFLAGS = -g
-BUILD_DIR = $(CHESS_ROOT)/bin
+BUILD_DIR = $(CPP_CHESS_ROOT)/bin
 OBJS = unitTest.cc ../ChessGame.cc ../ChessBoard.cc ../ChessAlgorithm.cc ../ChessMove.cc ../ChessPiece.cc ../BoardPosition.cc
 
 all : runUnitTest algorithm
