Add Check for Player Moving the Other Player's Piece
There were two definitions of White/Black, so I condensed those into
one for simplicity.

Added a NextSteps file for things that need to be done.

--- a/server/cpp/tests/makefile
+++ b/server/cpp/tests/makefile
@@ -1,7 +1,7 @@
 CC = g++
 CFLAGS = -g -Wall
 BUILD_DIR = $(CPP_CHESS_ROOT)/bin
-OBJS = unitTest.cc ../ChessGame.cc ../ChessBoard.cc ../ChessAlgorithm.cc ../ChessMove.cc ../ChessPiece.cc ../BoardPosition.cc
+OBJS = unitTest.cc ../ChessGame.cc ../ChessBoard.cc ../ChessAlgorithm.cc ../ChessMove.cc ../ChessPiece.cc ../BoardPosition.cc ../ChessColor.cc
 
 all : runUnitTest algorithm
 
